css/style.css
/* ... */
.slide5:after {
  content: "";
  width: 90vw;
  margin-left: 5vw;
  height: 1px;
  background-color: white;
  display: block;
  opacity: 0.1;
  margin-top: 100px;
}

.container4 {
  height: 100%;
  width: 100%;
  background-color: rgba(0, 0, 0, 0.6);
  display: flex;
  flex-direction: column;
}

.contacts-container {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 20px;
  padding: 20px;
  flex-wrap: wrap;
  font-family: determination-sans;
  color: white;
  font-size: 1.5em;
}

.contacts-container .element::before {
  content: "";
  height: 50px;
  width: 50px;
  display: inline-block;
  border: 1px dotted white;
  background-repeat: no-repeat;
  background-color: black;
  vertical-align: middle;
  margin-right: 20px;
}

#bluesky::before {
  background-image: url(../images/bluesky_white.svg);
  background-size: 80%;
  background-position: center;
}

#fb::before {
  background-image: url(../images/facebook_white.svg);
  background-size: 80%;
  background-position: center;
}

#mail::before {
  background-image: url(../images/mail_wehite.svg);
  background-size: 80%;
  background-position: center;
}

@media screen and (max-width: 500px) {
  .contacts-container .element a {
    display: none;
  }
}

.contacts-container .element a:visited {
  color: white;
}

.contacts-container .element a:link {
  color: white;
}

footer {
  background-color: black;
  width: 100%;
  min-height: 20%;
  text-align: center;
  font-size: 1.3em;
  font-family: "PixelOperator8";
  color: white;
}

.title {
  color: white;
  font-family: "determination-sans";
  font-weight: 300;
  font-size: 4em;
  transition: 0.8s ease;
  text-align: center;
  display: block;
  margin-top: 30px;
  margin-bottom: 30px;
}

.title1 {
  position: relative;
  margin-top: 8vh;
  opacity: 0;
}

.moved-title1 {
  opacity: 1;
}

.title2 {
  position: relative;
  left: 50%;
  transform: translateX(-50%) translateY(200px);
  font-size: 70px;
  margin-top: 30px;
  opacity: 0;
}

.moved-title2 {
  opacity: 1;
  transform: translateX(-50%);
}

.title3 {
  text-align: center;
  opacity: 0;
  color: white;
  z-index: 2;
}

.moved-title3 {
  opacity: 1;
}

.title4 {
  margin-top: 30px;
  transform: translateX(250px);
  opacity: 0;
  font-size: 50px;
}

.title4:after {
  display: none;
}

.moved-title4 {
  transform: translateX(0px);
  opacity: 1;
}

.title5 {
  position: relative;
  opacity: 0;
}

.moved-title5 {
  opacity: 1;
}

.description {
  color: white;
  font-family: "PixelOperator8";
  font-size: 1em;
}

.description1 {
  display: block;
  margin: 4%;
  position: relative;
  opacity: 0;
  transition: 0.8s ease;
  z-index: 2;
  font-size: 2.2em;
  text-align: justify;
  text-justify: inter-word;
}

.moved-description1 {
  transform: translateX(0);
  opacity: 1;
}

.description1 a,
.description1 a:visited {
  color: white;
}

.description1 a:hover,
.description1 a:visited:hover {
  text-decoration: none;
}

.description2 {
  color: white;
  font-size: 3vw;
  display: block;
  text-align: center;
  padding-top: 20vh;
}

/* top bar */

.top-bar {
  position: fixed;
  width: 100%;
  height: 45px;
  background-color: black;
  z-index: 999;
  margin-top: -50px;
  transition: 0.8s ease;
  opacity: 0.9;
  overflow: hidden;
}

.visible-top-bar {
  margin-top: 0;
}

.top-bar ul {
  list-style: none;
  font-family: determination-sans;
  font-size: 30px;
  line-height: 45px;
  color: white;
  padding: 0;
  margin-top: 0;
  float: right;
}

.top-bar li {
  display: inline;
  margin-right: 15px;
}

.top-bar li:last-of-type {
  margin-right: 40px;
}

.top-bar a,
.top-bar a:visited {
  color: white;
  text-decoration: none;
  transition: 0.5s ease;
}

.top-bar a:hover {
  color: rgb(222, 60, 60);
}

.dog {
  background-image: url(../images/annoying-dog.gif);
  height: 38px;
  width: 46px;
  display: block;
  float: left;
  background-size: cover;
  image-rendering: pixelated;
  image-rendering: -moz-crisp-edges;
  -ms-interpolation-mode: nearest-neighbor;
  margin: 4px 0 0 35px;
}

/* download button */

.download-section {
  min-width: 30vw;
  max-width: 800px;
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: white;
  z-index: 2;
  margin-left: 20px;
  margin-right: 20px;
}

.new-download-button {
  text-align: center;
  width: 100%;
  flex-grow: 1;
  display: block;
  margin: 10px auto;
  position: relative;
  top: 5%;
  border-radius: 10px;
  opacity: 1;
}

.new-download-button img {
  width: 100%;
  object-fit: contain;
  transition: 0.3s ease;
}

.new-download-button img:hover {
  content: url(../images/download_1.png);
  transform: scale(1.1);
}

.download-caption {
  font-family: PixelOperator8;
  font-size: 2em;
  text-align: center;
  margin: 10px auto;
  display: block;
}

.download-caption a:link {
  color: white;
}

.download-caption a:visited {
  color: gainsboro;
}

@keyframes bounce {
  0% {
    transform: scale(0);
  }
  50% {
    transform: scale(1.1);
  }
  70% {
    transform: scale(0.9);
  }
  85% {
    transform: scale(1.05);
  }
  100% {
    transform: scale(1);
  }
}

/* Lista staff */

#staff-list-title {
  color: white;
  font-family: determination-sans;
  font-size: 2.5em;
  text-align: center;
}

.staff-list {
  color: #fafafa;
  padding-top: 50px;
  width: 90vw;
  max-width: 1800px;
  position: relative;
  margin: 0 auto;
  opacity: 0;
  transition: 1s ease;
  transform: translateY(250px);
  font-family: PixelOperator8;
}

.animated-staff-list {
  opacity: 1;
  transform: translateY(0px);
}

.staff-list ul {
  list-style: none;
  padding: 0;
  margin: 0;
  display: flex;
  width: 100%;
  align-items: center;
  justify-content: center;
  padding: 20px;
  gap: 20px;
  flex-wrap: wrap;
}

.staff-list li {
  width: 360px;
  max-width: 360px;
  max-height: 70px;
  flex-grow: 1;
}
/* ... */

